--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "2         Transporte          26            122"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "3  Assistência social   Assistência comunitária  1713.411805"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -483,19 +483,19 @@
        "26  PROGRAMA NACIONAL DE MELHORIA DE ACESSO E QUAL...             0.00"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "q2_query = ('select ' +\n",
+    "q3_query = ('select ' +\n",
     "    'nome_programa_governo, sum(valor_despesa) as despesas_totais ' +\n",
     "    'from programa_governo ' +\n",
     "    'natural join (select * from despesa_publica where ano_despesa=2018) ' +\n",
     "    'group by cod_programa_governo order by despesas_totais desc')\n",
-    "q2 = query(q2_query)\n",
-    "q2"
+    "q3 = query(q3_query)\n",
+    "q3"
    ]
   },
   {
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "[153 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +739,7 @@
        "4      30000      Ministério da Justiça e Segurança Pública             0.00"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "4               Saúde          Atenção básica          1000.00"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,11 +866,139 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Escrevendo no .csv\n",
+    "```\n",
+    "#questao|#linhas|#colunas|sql-query\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#questao</th>\n",
+       "      <th>#linhas</th>\n",
+       "      <th>#colunas</th>\n",
+       "      <th>sql</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>select funcao.nome_funcao, funcao.cod_funcao, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>select * from(select funcao.nome_funcao, subfu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2</td>\n",
+       "      <td>select nome_programa_governo, sum(valor_despes...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>153</td>\n",
+       "      <td>4</td>\n",
+       "      <td>select mes_despesa, ano_despesa, programa_gove...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>select cod_orgao, orgao.nome_orgao, sum(valor_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>select * from(select nome_funcao, nome_subfunc...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #questao  #linhas  #colunas  \\\n",
+       "0         1        3         3   \n",
+       "1         2        4         3   \n",
+       "2         3       27         2   \n",
+       "3         4      153         4   \n",
+       "4         5        5         3   \n",
+       "5         6        5         3   \n",
+       "\n",
+       "                                                 sql  \n",
+       "0  select funcao.nome_funcao, funcao.cod_funcao, ...  \n",
+       "1  select * from(select funcao.nome_funcao, subfu...  \n",
+       "2  select nome_programa_governo, sum(valor_despes...  \n",
+       "3  select mes_despesa, ano_despesa, programa_gove...  \n",
+       "4  select cod_orgao, orgao.nome_orgao, sum(valor_...  \n",
+       "5  select * from(select nome_funcao, nome_subfunc...  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_df = pd.DataFrame(\n",
+    "    {\n",
+    "        '#questao':[1,2,3,4,5,6],\n",
+    "        '#linhas':[q1.shape[0], q2.shape[0], q3.shape[0], q4.shape[0], q5.shape[0], q6.shape[0]],\n",
+    "        '#colunas':[q1.shape[1], q2.shape[1], q3.shape[1], q4.shape[1], q5.shape[1], q6.shape[1]],\n",
+    "        'sql':[q1_last, q2_query, q3_query, q4_query, q5_query, q6_query],\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "csv_df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "csv_df.to_csv('2015042134.csv', sep=)"
+   ]
   }
  ],
  "metadata": {
