finish modeling the db

--- a/TP2/matches_to_sql.ipynb
+++ b/TP2/matches_to_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "174"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "85"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "97"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#try:\n",
+    "#    connection = sql.connect('test.db')\n",
+    "#    cursor = connection.cursor()\n",
+    "#    db = io.open('owl.sql', 'r', encoding='ISO-8859-1')\n",
+    "#    database = db.read()\n",
+    "#    cursor.executescript(database)\n",
+    "#except Exception as e:\n",
+    "#    print(e)\n",
+    "#    os.remove('test.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "132"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "teams_schema = (\n",
+    "    '\\nCREATE TABLE [PLAYERS] ('\n",
+    "    'COMPETITOR_ID INT,'\n",
+    "    'TEAM_ID INT, '\n",
+    "    'HANDLE TEXT, '\n",
+    "    'ROLE TEXT, '\n",
+    "    'NUMBER INT,'\n",
+    "    'NAME TEXT,'\n",
+    "    'PRIMARY KEY (COMPETITOR_ID)'\n",
+    "    ');\\n\\n'\n",
+    ")\n",
+    "\n",
+    "file.write(teams_schema)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_list = []\n",
+    "player_list = []\n",
+    "for match in data:\n",
+    "    for competitor in match['competitors']:\n",
+    "        if competitor['id'] not in team_list:\n",
+    "            team_list.append(competitor['id'])\n",
+    "            for player in competitor['players']:\n",
+    "                if player['player']['id'] not in player_list:\n",
+    "                    player_list.append(player['player']['id'])\n",
+    "                    insert = (\n",
+    "                            'INSERT INTO PLAYERS (COMPETITOR_ID, TEAM_ID, HANDLE, ROLE, NUMBER, NAME) VALUES '\n",
+    "                            '(%d, %d, \\'%s\\', \\'%s\\', %d, \\'%s\\');'\n",
+    "                            % (player['player']['id'], \n",
+    "                               player['team']['id'], \n",
+    "                               player['player']['name'],\n",
+    "                               player['player']['attributes']['role'],\n",
+    "                               player['player']['attributes']['player_number'],\n",
+    "                               ' '.join([player['player']['givenName'], player['player']['familyName']]))\n",
+    "                        )\n",
+    "                    file.write(insert+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,6 +346,208 @@
     "except Exception as e:\n",
     "    print(e)\n",
     "    os.remove('test.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COMPETITOR_ID</th>\n",
+       "      <th>TEAM_ID</th>\n",
+       "      <th>HANDLE</th>\n",
+       "      <th>ROLE</th>\n",
+       "      <th>NUMBER</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>TEAM_NAME</th>\n",
+       "      <th>TEAM_LOCATION</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>8218</td>\n",
+       "      <td>4409</td>\n",
+       "      <td>Marve1</td>\n",
+       "      <td>tank</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Min Seo Hwang</td>\n",
+       "      <td>Seoul Dynasty</td>\n",
+       "      <td>Seoul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>8831</td>\n",
+       "      <td>4409</td>\n",
+       "      <td>FITS</td>\n",
+       "      <td>offense</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Dong Eon Kim</td>\n",
+       "      <td>Seoul Dynasty</td>\n",
+       "      <td>Seoul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>9279</td>\n",
+       "      <td>4409</td>\n",
+       "      <td>ILLICIT</td>\n",
+       "      <td>offense</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Je Min Park</td>\n",
+       "      <td>Seoul Dynasty</td>\n",
+       "      <td>Seoul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4098</td>\n",
+       "      <td>4409</td>\n",
+       "      <td>ZUNBA</td>\n",
+       "      <td>tank</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Joonhyeok Kim</td>\n",
+       "      <td>Seoul Dynasty</td>\n",
+       "      <td>Seoul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4104</td>\n",
+       "      <td>4409</td>\n",
+       "      <td>tobi</td>\n",
+       "      <td>support</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Jinmo Yang</td>\n",
+       "      <td>Seoul Dynasty</td>\n",
+       "      <td>Seoul</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>169</td>\n",
+       "      <td>4652</td>\n",
+       "      <td>7697</td>\n",
+       "      <td>ArK</td>\n",
+       "      <td>support</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Yeonjun Hong</td>\n",
+       "      <td>Washington Justice</td>\n",
+       "      <td>Washington, DC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>170</td>\n",
+       "      <td>8784</td>\n",
+       "      <td>7697</td>\n",
+       "      <td>Corey</td>\n",
+       "      <td>offense</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Corey Nigra</td>\n",
+       "      <td>Washington Justice</td>\n",
+       "      <td>Washington, DC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>171</td>\n",
+       "      <td>8783</td>\n",
+       "      <td>7697</td>\n",
+       "      <td>Stratus</td>\n",
+       "      <td>offense</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Ethan Yankel</td>\n",
+       "      <td>Washington Justice</td>\n",
+       "      <td>Washington, DC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>172</td>\n",
+       "      <td>11102</td>\n",
+       "      <td>7697</td>\n",
+       "      <td>LullSiSH</td>\n",
+       "      <td>tank</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Lukas Wiklund</td>\n",
+       "      <td>Washington Justice</td>\n",
+       "      <td>Washington, DC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>173</td>\n",
+       "      <td>11101</td>\n",
+       "      <td>7697</td>\n",
+       "      <td>ELLIVOTE</td>\n",
+       "      <td>tank</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Elliot Vaneryd</td>\n",
+       "      <td>Washington Justice</td>\n",
+       "      <td>Washington, DC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>174 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     COMPETITOR_ID  TEAM_ID    HANDLE     ROLE  NUMBER            NAME  \\\n",
+       "0             8218     4409    Marve1     tank      11   Min Seo Hwang   \n",
+       "1             8831     4409      FITS  offense      16    Dong Eon Kim   \n",
+       "2             9279     4409   ILLICIT  offense      21     Je Min Park   \n",
+       "3             4098     4409     ZUNBA     tank       5   Joonhyeok Kim   \n",
+       "4             4104     4409      tobi  support       7      Jinmo Yang   \n",
+       "..             ...      ...       ...      ...     ...             ...   \n",
+       "169           4652     7697       ArK  support       2    Yeonjun Hong   \n",
+       "170           8784     7697     Corey  offense      11     Corey Nigra   \n",
+       "171           8783     7697   Stratus  offense      27    Ethan Yankel   \n",
+       "172          11102     7697  LullSiSH     tank      15   Lukas Wiklund   \n",
+       "173          11101     7697  ELLIVOTE     tank      28  Elliot Vaneryd   \n",
+       "\n",
+       "              TEAM_NAME   TEAM_LOCATION  \n",
+       "0         Seoul Dynasty           Seoul  \n",
+       "1         Seoul Dynasty           Seoul  \n",
+       "2         Seoul Dynasty           Seoul  \n",
+       "3         Seoul Dynasty           Seoul  \n",
+       "4         Seoul Dynasty           Seoul  \n",
+       "..                  ...             ...  \n",
+       "169  Washington Justice  Washington, DC  \n",
+       "170  Washington Justice  Washington, DC  \n",
+       "171  Washington Justice  Washington, DC  \n",
+       "172  Washington Justice  Washington, DC  \n",
+       "173  Washington Justice  Washington, DC  \n",
+       "\n",
+       "[174 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query('select h from players natural join teams', connection)"
    ]
   },
   {
