--- a/TP2/matches_to_sql.ipynb
+++ b/TP2/matches_to_sql.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -374,180 +374,129 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>COMPETITOR_ID</th>\n",
-       "      <th>TEAM_ID</th>\n",
        "      <th>HANDLE</th>\n",
-       "      <th>ROLE</th>\n",
-       "      <th>NUMBER</th>\n",
-       "      <th>NAME</th>\n",
        "      <th>TEAM_NAME</th>\n",
-       "      <th>TEAM_LOCATION</th>\n",
+       "      <th>NUMBER</th>\n",
+       "      <th>ROLE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>8218</td>\n",
-       "      <td>4409</td>\n",
-       "      <td>Marve1</td>\n",
-       "      <td>tank</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Min Seo Hwang</td>\n",
-       "      <td>Seoul Dynasty</td>\n",
-       "      <td>Seoul</td>\n",
+       "      <td>aKm</td>\n",
+       "      <td>Dallas Fuel</td>\n",
+       "      <td>10</td>\n",
+       "      <td>offense</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>8831</td>\n",
-       "      <td>4409</td>\n",
-       "      <td>FITS</td>\n",
+       "      <td>Taimou</td>\n",
+       "      <td>Dallas Fuel</td>\n",
+       "      <td>13</td>\n",
        "      <td>offense</td>\n",
-       "      <td>16</td>\n",
-       "      <td>Dong Eon Kim</td>\n",
-       "      <td>Seoul Dynasty</td>\n",
-       "      <td>Seoul</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>9279</td>\n",
-       "      <td>4409</td>\n",
-       "      <td>ILLICIT</td>\n",
+       "      <td>ZachaREEE</td>\n",
+       "      <td>Dallas Fuel</td>\n",
+       "      <td>22</td>\n",
        "      <td>offense</td>\n",
-       "      <td>21</td>\n",
-       "      <td>Je Min Park</td>\n",
-       "      <td>Seoul Dynasty</td>\n",
-       "      <td>Seoul</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>4098</td>\n",
-       "      <td>4409</td>\n",
-       "      <td>ZUNBA</td>\n",
-       "      <td>tank</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Joonhyeok Kim</td>\n",
-       "      <td>Seoul Dynasty</td>\n",
-       "      <td>Seoul</td>\n",
+       "      <td>HarryHook</td>\n",
+       "      <td>Dallas Fuel</td>\n",
+       "      <td>9</td>\n",
+       "      <td>support</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>4104</td>\n",
-       "      <td>4409</td>\n",
-       "      <td>tobi</td>\n",
+       "      <td>uNKOE</td>\n",
+       "      <td>Dallas Fuel</td>\n",
+       "      <td>24</td>\n",
        "      <td>support</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Jinmo Yang</td>\n",
-       "      <td>Seoul Dynasty</td>\n",
-       "      <td>Seoul</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Closer</td>\n",
+       "      <td>Dallas Fuel</td>\n",
+       "      <td>17</td>\n",
+       "      <td>support</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>169</td>\n",
-       "      <td>4652</td>\n",
-       "      <td>7697</td>\n",
-       "      <td>ArK</td>\n",
-       "      <td>support</td>\n",
+       "      <td>6</td>\n",
+       "      <td>OGE</td>\n",
+       "      <td>Dallas Fuel</td>\n",
        "      <td>2</td>\n",
-       "      <td>Yeonjun Hong</td>\n",
-       "      <td>Washington Justice</td>\n",
-       "      <td>Washington, DC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>170</td>\n",
-       "      <td>8784</td>\n",
-       "      <td>7697</td>\n",
-       "      <td>Corey</td>\n",
-       "      <td>offense</td>\n",
-       "      <td>11</td>\n",
-       "      <td>Corey Nigra</td>\n",
-       "      <td>Washington Justice</td>\n",
-       "      <td>Washington, DC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>171</td>\n",
-       "      <td>8783</td>\n",
-       "      <td>7697</td>\n",
-       "      <td>Stratus</td>\n",
-       "      <td>offense</td>\n",
-       "      <td>27</td>\n",
-       "      <td>Ethan Yankel</td>\n",
-       "      <td>Washington Justice</td>\n",
-       "      <td>Washington, DC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>172</td>\n",
-       "      <td>11102</td>\n",
-       "      <td>7697</td>\n",
-       "      <td>LullSiSH</td>\n",
        "      <td>tank</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Lukas Wiklund</td>\n",
-       "      <td>Washington Justice</td>\n",
-       "      <td>Washington, DC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>173</td>\n",
-       "      <td>11101</td>\n",
-       "      <td>7697</td>\n",
-       "      <td>ELLIVOTE</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Mickie</td>\n",
+       "      <td>Dallas Fuel</td>\n",
+       "      <td>7</td>\n",
        "      <td>tank</td>\n",
-       "      <td>28</td>\n",
-       "      <td>Elliot Vaneryd</td>\n",
-       "      <td>Washington Justice</td>\n",
-       "      <td>Washington, DC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>NotE</td>\n",
+       "      <td>Dallas Fuel</td>\n",
+       "      <td>3</td>\n",
+       "      <td>tank</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>Trill</td>\n",
+       "      <td>Dallas Fuel</td>\n",
+       "      <td>30</td>\n",
+       "      <td>tank</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>174 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     COMPETITOR_ID  TEAM_ID    HANDLE     ROLE  NUMBER            NAME  \\\n",
-       "0             8218     4409    Marve1     tank      11   Min Seo Hwang   \n",
-       "1             8831     4409      FITS  offense      16    Dong Eon Kim   \n",
-       "2             9279     4409   ILLICIT  offense      21     Je Min Park   \n",
-       "3             4098     4409     ZUNBA     tank       5   Joonhyeok Kim   \n",
-       "4             4104     4409      tobi  support       7      Jinmo Yang   \n",
-       "..             ...      ...       ...      ...     ...             ...   \n",
-       "169           4652     7697       ArK  support       2    Yeonjun Hong   \n",
-       "170           8784     7697     Corey  offense      11     Corey Nigra   \n",
-       "171           8783     7697   Stratus  offense      27    Ethan Yankel   \n",
-       "172          11102     7697  LullSiSH     tank      15   Lukas Wiklund   \n",
-       "173          11101     7697  ELLIVOTE     tank      28  Elliot Vaneryd   \n",
-       "\n",
-       "              TEAM_NAME   TEAM_LOCATION  \n",
-       "0         Seoul Dynasty           Seoul  \n",
-       "1         Seoul Dynasty           Seoul  \n",
-       "2         Seoul Dynasty           Seoul  \n",
-       "3         Seoul Dynasty           Seoul  \n",
-       "4         Seoul Dynasty           Seoul  \n",
-       "..                  ...             ...  \n",
-       "169  Washington Justice  Washington, DC  \n",
-       "170  Washington Justice  Washington, DC  \n",
-       "171  Washington Justice  Washington, DC  \n",
-       "172  Washington Justice  Washington, DC  \n",
-       "173  Washington Justice  Washington, DC  \n",
-       "\n",
-       "[174 rows x 8 columns]"
+       "      HANDLE    TEAM_NAME  NUMBER     ROLE\n",
+       "0        aKm  Dallas Fuel      10  offense\n",
+       "1     Taimou  Dallas Fuel      13  offense\n",
+       "2  ZachaREEE  Dallas Fuel      22  offense\n",
+       "3  HarryHook  Dallas Fuel       9  support\n",
+       "4      uNKOE  Dallas Fuel      24  support\n",
+       "5     Closer  Dallas Fuel      17  support\n",
+       "6        OGE  Dallas Fuel       2     tank\n",
+       "7     Mickie  Dallas Fuel       7     tank\n",
+       "8       NotE  Dallas Fuel       3     tank\n",
+       "9      Trill  Dallas Fuel      30     tank"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query('select h from players natural join teams', connection)"
+    "query('select handle, team_name, number, role from players natural join teams where team_name=\\'Dallas Fuel\\' order by role', connection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "unable to open database file",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-06fb54134c71>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mconnection2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://drive.google.com/file/d/1XHYcdYOf5n1HIG7ESUOkbdUMluFI3G4k/view'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: unable to open database file"
+     ]
+    }
+   ],
+   "source": [
+    "connection2 = sql.connect('https://drive.google.com/file/d/1XHYcdYOf5n1HIG7ESUOkbdUMluFI3G4k/view')"
    ]
   },
   {
