--- a/TP2/matches_to_sql.ipynb
+++ b/TP2/matches_to_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "174"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "85"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "97"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,16 +264,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "132"
+       "143"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,6 +287,7 @@
     "    'ROLE TEXT, '\n",
     "    'NUMBER INT,'\n",
     "    'NAME TEXT,'\n",
+    "    'PHOTO TEXT,'\n",
     "    'PRIMARY KEY (COMPETITOR_ID)'\n",
     "    ');\\n\\n'\n",
     ")\n",
@@ -296,7 +297,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tank'"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0]['competitors'][0]['players'][0]['player']['attributes']['role']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,21 +331,22 @@
     "                if player['player']['id'] not in player_list:\n",
     "                    player_list.append(player['player']['id'])\n",
     "                    insert = (\n",
-    "                            'INSERT INTO PLAYERS (COMPETITOR_ID, TEAM_ID, HANDLE, ROLE, NUMBER, NAME) VALUES '\n",
-    "                            '(%d, %d, \\'%s\\', \\'%s\\', %d, \\'%s\\');'\n",
+    "                            'INSERT INTO PLAYERS (COMPETITOR_ID, TEAM_ID, HANDLE, ROLE, NUMBER, NAME, PHOTO) VALUES '\n",
+    "                            '(%d, %d, \\'%s\\', \\'%s\\', %d, \\'%s\\', \\'%s\\');'\n",
     "                            % (player['player']['id'], \n",
     "                               player['team']['id'], \n",
     "                               player['player']['name'],\n",
     "                               player['player']['attributes']['role'],\n",
     "                               player['player']['attributes']['player_number'],\n",
-    "                               ' '.join([player['player']['givenName'], player['player']['familyName']]))\n",
+    "                               ' '.join([player['player']['givenName'], player['player']['familyName']]),\n",
+    "                               player['player']['headshot'])\n",
     "                        )\n",
     "                    file.write(insert+'\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -469,34 +491,13 @@
        "9      Trill  Dallas Fuel      30     tank"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query('select handle, team_name, number, role from players natural join teams where team_name=\\'Dallas Fuel\\' order by role', connection)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "unable to open database file",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-06fb54134c71>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mconnection2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'https://drive.google.com/file/d/1XHYcdYOf5n1HIG7ESUOkbdUMluFI3G4k/view'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m: unable to open database file"
-     ]
-    }
-   ],
-   "source": [
-    "connection2 = sql.connect('https://drive.google.com/file/d/1XHYcdYOf5n1HIG7ESUOkbdUMluFI3G4k/view')"
    ]
   },
   {
