change weak query

--- a/TP2/TP2 - Queries.ipynb
+++ b/TP2/TP2 - Queries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "19     7697      Washington Justice"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "19     Washington, DC"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "9     HyunWoo Choi      JJANU"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,12 +475,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Print the name of the team that won most matches in the league"
+    "2. Print the name of the team that won most matches in the league, and how many wins it had"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "0  San Francisco Shock              35"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,12 +536,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Print the name of the map that was played the most in the league"
+    "3. How many wins does 'Washington Justice' have?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -565,32 +565,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>MAP</th>\n",
-       "      <th>Number of plays</th>\n",
+       "      <th>Wins</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>ilios</td>\n",
-       "      <td>100</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     MAP  Number of plays\n",
-       "0  ilios              100"
+       "   Wins\n",
+       "0     8"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "query('select map, count(map) as \\'Number of plays\\' from games natural join matches where map <> \\'None\\'group by map order by count(map) desc limit 1', connection)"
+    "query('select count(match_id) as Wins from matches '\n",
+    "      'inner join teams on matches.winner_id=teams.team_id where team_name=\\'Washington Justice\\''\n",
+    "      , connection)"
    ]
   },
   {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "8       Minki Park      Viol2t  San Francisco Shock"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "3         None"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +847,7 @@
        "0  San Francisco Shock"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +910,7 @@
        "0   144"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +973,7 @@
        "0   188"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,16 +997,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x118a2ed30>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10cc2ac18>"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1040,16 +1040,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x118dfe588>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x10ed92048>"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
